tests/slurm-47837687.out
Lmod has detected the following error: These module(s) or extension(s) exist
but cannot be loaded as requested: "matlab"

   You encountered this error for one of the following reasons:
   1. Missing version specification: On Pitzer, you must specify an available
version.
   2. Missing required modules: Ensure you have loaded the appropriate compiler
and MPI modules.

   Try: "module spider matlab" to view available versions or required modules.

   If you need further assistance, please contact oschelp@osc.edu with the
subject line "lmod error: matlab"



+ PROJECT_ROOT=/users/PAS1730/ziyaosu816/Desktop/ProjectSpace/GratingOptimization/GratingOpt
+ cd /users/PAS1730/ziyaosu816/Desktop/ProjectSpace/GratingOptimization/GratingOpt
+ export PYTHONPATH=/users/PAS1730/ziyaosu816/Desktop/ProjectSpace/GratingOptimization/GratingOpt/src:
+ PYTHONPATH=/users/PAS1730/ziyaosu816/Desktop/ProjectSpace/GratingOptimization/GratingOpt/src:
+ python -u -m grating_opt.main
[WARNING 05-27 12:03:51] ax.storage.sqa_store.with_db_settings_base: Ax currently requires a sqlalchemy version below 2.0. This will be addressed in a future release. Disabling SQL storage in Ax for now, if you would like to use SQL storage please install Ax with mysql extras via `pip install ax-platform[mysql]`.
  0%|          | 0/2 [00:00<?, ?it/s][INFO 05-27 12:03:52] ax.api.client: Generated new trial 0 with parameters {'duty_cycle': 0.424366, 'pillar_thickness': 1385.756071, 'residual_thickness': 102.919629, 'lines_per_mm': 617.189169, 'aoi': 38.368461} using GenerationNode Sobol.
0
/bin/sh: line 1: matlab: command not found
  0%|          | 0/2 [00:00<?, ?it/s]
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/users/PAS1730/ziyaosu816/Desktop/ProjectSpace/GratingOptimization/GratingOpt/src/grating_opt/main.py", line 69, in <module>
    main(args)
  File "/users/PAS1730/ziyaosu816/Desktop/ProjectSpace/GratingOptimization/GratingOpt/src/grating_opt/main.py", line 36, in main
    client, best_values, all_values = opt.optimize_params(
                                      ^^^^^^^^^^^^^^^^^^^^
  File "/users/PAS1730/ziyaosu816/Desktop/ProjectSpace/GratingOptimization/GratingOpt/src/grating_opt/optimizer.py", line 109, in optimize_params
    res = func(
          ^^^^^
  File "/users/PAS1730/ziyaosu816/Desktop/ProjectSpace/GratingOptimization/GratingOpt/src/grating_opt/simulation_calls.py", line 63, in call_simulations
    res_rcwa = run_rcwa(trial, params, local)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/users/PAS1730/ziyaosu816/Desktop/ProjectSpace/GratingOptimization/GratingOpt/src/grating_opt/SA_RCWA.py", line 53, in run_rcwa
    subprocess.run(cmd, shell=True, check=True) #Switch to subprocess
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/apps/python/3.12/lib/python3.12/subprocess.py", line 571, in run
    raise CalledProcessError(retcode, process.args,
subprocess.CalledProcessError: Command 'matlab -batch "addpath(genpath('../../lib/RCWA')); run('code_rcwa.m'); exit;"' returned non-zero exit status 127.
